--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ ctrlc = { version = "3.4.5", features = ["termination"] }
 nom = "8.0.0"
 ratatui = "0.29.0"
 strsim = "0.11.1"
+tui-textarea = "0.7.0"
