Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ stages:
 build:
   stage: build
   image: rust:latest
+  before_script:
+  - export PATH="$HOME/.cargo/bin:$PATH"
   script:
     - cargo build --release
   artifacts:
